# chaos-tproxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.chaos-tproxy  Makefile  go.mod  go.sum
chaos-tproxy-controller/: Cargo.toml
chaos-tproxy-controller/src/: config.rs  exec.rs  handle.rs  lib.rs  main.rs  raw_config.rs  service.rs
chaos-tproxy-controller/src/cmd/: command_line.rs
chaos-tproxy-controller/src/net/: bridge.rs  iptables.rs  routes.rs  set_net.rs
chaos-tproxy-controller/src/proxy/: config.rs  exec.rs  mod.rs
chaos-tproxy-ebpf-loader/: Dockerfile  go.mod
chaos-tproxy-ebpf-loader/cmd/loader/: main.go
chaos-tproxy-ebpf-loader/internal/bpfload/: gen.go
chaos-tproxy-ebpf-loader/internal/config/: config.go
chaos-tproxy-iptables-loader/: Dockerfile  go.mod
chaos-tproxy-proxy/: Cargo.toml
chaos-tproxy-proxy/src/: lib.rs  raw_config.rs  uds_fd.rs
chaos-tproxy-proxy/src/handler/http/: action.rs  selector.rs
chaos-tproxy-proxy/src/proxy/: bridge.rs  config.rs  inbound.rs  mod.rs  server.rs  splice.rs  upstream.rs
chaos-tproxy-proxy/src/proxy/http/: config.rs  connector.rs  mod.rs  pingora_server.rs  server.rs
chaos-tproxy-proxy/src/proxy/tcp/: listener.rs  mod.rs  orig_dst.rs  transparent_socket.rs
chaos-tproxy-proxy/src/schema/: mod.rs  openapi.rs
chaos-tproxy-proxy/tests/: openapi_examples.rs  openapi_parity.rs
cmd/chaos-tproxy/: check.go  check_test.go  ls.go  main.go  run.go  version.go
config-examples/: ebpf-example.yaml  replace-req-header.yaml  replace-rsp-empty.yaml  replace-with-big-body.yaml  rp-req-header.json
docs/: ebpf-loader-README.md
internal/chaosconfig/: parse_test.go  types.gen.go
internal/injector/: injector.go
internal/podnetmock/: monitor_test.go
internal/runtime/: containerd.go  docker.go  resolve.go  runtime.go
internal/state/: daemon.go  state.go  state_test.go
schemas/: chaos-tproxy.openapi.yaml  go-codegen.yaml
tests/: Cargo.toml
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs
(+12 files in other folders)
