[package]
name = "chaos-tproxy-proxy"
version = "0.5.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
base64 = "0.13.0"
bytes = "1.0.1"
futures = "0.3"
http = "0.2.7"
humantime-serde = "1.0"
json-patch = "0.2.6"
libc = {version = "0.2.81", features = ["std"]}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.123"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.8"
tokio = {version = "1.36", features = ["full"]}
tracing = "0.1"
tracing-log = "0.2"
wildmatch = "2.1"

# Pingora — codec + ServerApp framework. Vendored at
# third_party/pingora with five small local patches:
#   * TcpSocketOptions.ip_transparent (listener)
#   * SocketDigest::raw_fd() (fd recovery)
#   * IO::as_any_mut + l4::Stream::tcp_stream_mut() (downcast for splice)
#   * v1::server::HttpSession::mark_response_body_complete (splice → finish)
#   * v1::client::HttpSession::stream_mut (mutable Stream access)
#   * v1::server::HttpSession::stream_mut + ServerSession::stream_mut
pingora-core = { path = "../third_party/pingora/pingora-core", default-features = false }
pingora-http = { path = "../third_party/pingora/pingora-http" }
num_cpus = "1"
